--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,11 @@ envlist = lint, unit, static, coverage-report
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-plugins_path = {toxinidir}/indico_rock/plugins/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
 all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
+basepython = python3.10
 setenv =
   PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
