--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,7 @@ deps =
     types-PyYAML
     types-requests
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}unit/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
     # uncomment the following line if this charm owns a lib
@@ -116,6 +117,7 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}unit/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
@@ -127,6 +129,7 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}unit/requirements.txt
 commands =
     coverage report
 
