--- a/.woke.yaml
+++ b/.woke.yaml
@@ -1,5 +1,7 @@
 ignore_files:
 # List of files to ignore
+  - lib/*
 
 rules:
-# List of words to ignore
+  # ignore blacklist, a term used by bandit
+  - name: blacklist
