--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,3 +1,7 @@
+# Copyright 2024 Canonical Ltd.
+# See LICENSE file for licensing details.
+# This file configures Charmcraft.
+
 # This file configures Charmcraft.
 # See https://juju.is/docs/sdk/charmcraft-yaml for guidance.
 
