--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,7 @@ deps =
     types-requests
     -r{toxinidir}/requirements.txt
     -r{[vars]tst_path}unit/requirements.txt
+    -r{[vars]tst_path}integration/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
     # uncomment the following line if this charm owns a lib
@@ -150,6 +151,7 @@ deps =
     pytest-asyncio
     pytest-operator
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}integration/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
 
