--- a/tox.ini
+++ b/tox.ini
@@ -145,8 +145,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    # Last compatible version with Juju 2.9
-    juju==3.0.4
+    juju
     pytest
     pytest-asyncio
     pytest-operator
