--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 [tox]
 skipsdist=True
 skip_missing_interpreters = True
-envlist = lint, unit, static, coverage-report
+envlist = lint, unit, static, coverage-report, integration
 
 [vars]
 src_path = {toxinidir}/src/
@@ -121,7 +121,7 @@ deps =
     -r{[vars]tst_path}unit/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
-        -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
+        -m pytest --ignore={[vars]tst_path}unit -v --tb native -s {posargs}
     coverage report
 
 [testenv:coverage-report]
@@ -144,9 +144,11 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
+pass_env =
+    PYTEST_ADDOPTS
 deps =
     juju
-    pytest
+    pytest==8.1.1
     pytest-asyncio
     pytest-operator
     -r{toxinidir}/requirements.txt
