--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -25,4 +25,5 @@ header:
     - '.pylintrc'
     - '.woke.yaml'
     - 'lib/**'
+    - 'tests/integration/data/clouds.yaml.tmpl'
   comment: on-failure
