add comemnt on testing on private endpoint

--- a/tox.ini
+++ b/tox.ini
@@ -155,6 +155,14 @@ deps =
     -r{[vars]tst_path}integration/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    ; Testing with microstack
+    ; tox -e integration -- --charm-file=./github-runner-image-builder_ubuntu-22.04-amd64-arm64.charm
+    ; --openstack-network-name=demo-network --openstack-flavor-name=m1.small
+    ; Testing on private endpoint, --openstack-network-name=<redacted>
+    ; --openstack-flavor-name=<redacted> --openstack-auth-url=<redacted>
+    ; --openstack-password=<redacted> --openstack-project-domain-name=<redacted>
+    ; --openstack-project-name=<redacted> --openstack-user-domain-name=<redacted>
+    ; --openstack-user-name=<redacted> --openstack-region-name=<redacted>
 
 [testenv:src-docs]
 allowlist_externals=sh
