test private endpoint

--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -12,4 +12,4 @@ jobs:
       provider: lxd
       modules: '["test_charm"]'
       self-hosted-runner: true
-      self-hosted-runner-label: stg-gh-deploy-image-builder
+      self-hosted-runner-label: stg-private-endpoint
