--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright 2023 Canonical Ltd.
+# Copyright 2024 Canonical Ltd.
 # See LICENSE file for licensing details.
 
 [tox]
@@ -9,11 +9,11 @@ envlist = lint, unit, static, coverage-report
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-plugins_path = {toxinidir}/indico_rock/plugins/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
 all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
+basepython = python3.10
 setenv =
   PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
@@ -56,6 +56,8 @@ deps =
     types-PyYAML
     types-requests
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}unit/requirements.txt
+    -r{[vars]tst_path}integration/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
     # uncomment the following line if this charm owns a lib
@@ -116,6 +118,7 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}unit/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
@@ -127,6 +130,7 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}unit/requirements.txt
 commands =
     coverage report
 
@@ -140,12 +144,32 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
+pass_env =
+    PYTEST_ADDOPTS
 deps =
-    # Last compatible version with Juju 2.9
-    juju==3.0.4
+    juju
     pytest
     pytest-asyncio
     pytest-operator
     -r{toxinidir}/requirements.txt
+    -r{[vars]tst_path}integration/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    ; Testing with microstack
+    ; tox -e integration -- --charm-file=./github-runner-image-builder_ubuntu-22.04-amd64-arm64.charm
+    ; --openstack-network-name=demo-network --openstack-flavor-name=m1.small
+    ; Testing on private endpoint, --openstack-network-name=<redacted>
+    ; --openstack-flavor-name=<redacted> --openstack-auth-url=<redacted>
+    ; --openstack-password=<redacted> --openstack-project-domain-name=<redacted>
+    ; --openstack-project-name=<redacted> --openstack-user-domain-name=<redacted>
+    ; --openstack-user-name=<redacted> --openstack-region-name=<redacted>
+
+[testenv:src-docs]
+allowlist_externals=sh
+description = Generate documentation for src
+deps =
+    lazydocs
+    -r{toxinidir}/requirements.txt
+commands =
+    ; can't run lazydocs directly due to needing to run it on src/* which produces an invocation error in tox
+    sh generate-src-docs.sh
