--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,6 +1,5 @@
 # Copyright 2024 Canonical Ltd.
 # See LICENSE file for licensing details.
-# This file configures Charmcraft.
 
 # This file configures Charmcraft.
 # See https://juju.is/docs/sdk/charmcraft-yaml for guidance.
@@ -17,7 +16,7 @@ description: |
 
   A single unit of this charm provides pre-built images for Github runner operator to spawn and
   register the self-hosted runners on Github. The charm will periodically rebuild and provide the
-  latest version of the image.
+  latest version of the images.
 links:
   contact: https://github.com/orgs/canonical/teams/is-charms
   documentation: https://discourse.charmhub.io/t/github-runner-image-builder-documentation-overview
@@ -28,14 +27,14 @@ links:
 type: charm
 bases:
   - build-on:
-    - name: "ubuntu"
-      channel: "22.04"
+    - name: ubuntu
+      channel: 22.04
       architectures:
       - amd64
       - arm64
     run-on:
-    - name: "ubuntu"
-      channel: "22.04"
+    - name: ubuntu
+      channel: 22.04
       architectures:
       - amd64
       - arm64
@@ -44,18 +43,17 @@ config:
   options:
     base-image:
       type: string
-      default: jammy
+      default: noble
       description: |
-        The base ubuntu OS image to use for the runners. Codename (e.g. "jammy") or version tag
-        (e.g. 22.04) is supported as input. Currently only supports LTS versions of jammy and
+        The base ubuntu OS image to use for the runners. Codename (e.g. "noble") or version tag
+        (e.g. 24.04) is supported as input. Currently only supports LTS versions of noble and
         higher, i.e. jammy, noble.
     build-interval:
       type: int
       default: 6
       description: |
-        The interval in hours between each scheduled image builds. Setting this value to 0 means
-        image will not be rebuilt after the initial build.
-    experimental-openstack-clouds-yaml:
+        The interval in hours between each scheduled image builds.
+    openstack-clouds-yaml:
       type: string
       default: ""
       description: |
