--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -28,13 +28,13 @@ type: charm
 bases:
   - build-on:
     - name: ubuntu
-      channel: 22.04
+      channel: "22.04"
       architectures:
       - amd64
       - arm64
     run-on:
     - name: ubuntu
-      channel: 22.04
+      channel: "22.04"
       architectures:
       - amd64
       - arm64
