add tmate debug

--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -17,3 +17,4 @@ jobs:
       modules: '["test_charm"]'
       self-hosted-runner: true
       self-hosted-runner-label: stg-private-endpoint
+      tmate-debug: true
