--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -25,14 +25,22 @@ bases:
     - name: ubuntu
       channel: "22.04"
       architectures:
-      - amd64
       - arm64
     run-on:
     - name: ubuntu
       channel: "22.04"
       architectures:
-      - amd64
       - arm64
+  - build-on:
+    - name: ubuntu
+      channel: "22.04"
+      architectures:
+      - amd64
+    run-on:
+    - name: ubuntu
+      channel: "22.04"
+      architectures:
+      - amd64
 
 config:
   options:
