--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -46,9 +46,8 @@ config:
   options:
     app-channel:
       type: string
-      default: "stable"
-      dsecription: |
-        The application channel to deploy (i.e. stable, edge)
+      default: stable
+      description: The application channel to deploy (i.e. stable, edge)
     base-image:
       type: string
       default: noble
