--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -15,6 +15,14 @@ jobs:
       juju-channel: 3.2/stable
       provider: lxd
       modules: '["test_charm"]'
-      self-hosted-runner: true
-      self-hosted-runner-label: stg-private-endpoint
-      tmate-debug: true
+      runs-on: [self-hosted, X64, jammy, stg-private-endpoint]
+
+
+  integration-tests-arm:
+    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
+    secrets: inherit
+    with:
+      juju-channel: 3.2/stable
+      provider: lxd
+      modules: '["test_charm"]'
+      runs-on: [self-hosted, ARM64, jammy, stg-private-endpoint]
