--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -15,8 +15,9 @@ jobs:
       juju-channel: 3.2/stable
       provider: lxd
       modules: '["test_charm"]'
-      runs-on: [self-hosted, X64, jammy, stg-private-endpoint]
-
+      self-hosted-runner: true
+      self-hosted-runner-arch: X64
+      self-hosted-runner-label: stg-private-endpoint
 
   integration-tests-arm:
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
@@ -25,4 +26,6 @@ jobs:
       juju-channel: 3.2/stable
       provider: lxd
       modules: '["test_charm"]'
-      runs-on: [self-hosted, ARM64, jammy, stg-private-endpoint]
+      self-hosted-runner: true
+      self-hosted-runner-arch: X64
+      self-hosted-runner-label: stg-private-endpoint
