feat: initial charm (#2)
* feat: initial charm

* fix: systemd service restart

* fix: systemd service restart

* suggestions

* fix unit tests

* remove retry module

* nosec comment

* fix unit tests

* remove testfike

* add tmate debug

* chore: remove guidance docs

* chore: same build-on run-on

* chore: default callback script path

* chore: gcc required comments

* chore: remove app_name from image name

* chore: charm state error decorator

* chore: build event rename

* chore: refactor buildconfig to charm state

* chore: minor refactors

* chore: expose cloud config

* chore: add unit tests

* chore: catch Popen exception

* chore: cron reconfigure condition

* feat: notify charm via callback script on run fail

* fix: pass charm to runnerbuilderconfig

* feat: add fail script callback hook

* fix: relative pathing

* test: fix tests and add test id to resources

* test: rename fixture

* model clouds yaml config

* application upgrade after build

* fix: charmcraft yaml typo

* chore: os- to openstack

* add arm64 tests

* self-hosted runner labels

* builder runner labels

* test: deploy juju compatible architecture

* fix: lint line too long

* callback script abs pathing

* use absolute callback path

* increase connect timeout

* remove action (trigger workflow - better build gone)

* remove fabric version pins (trigger workflow - better build gone)

* fix feedback

* group script to put to background

* fix: SSH exception retry

* test: increase timeouts

--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -3,19 +3,31 @@ name: Integration tests
 on:
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   integration-tests:
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
     secrets: inherit
     with:
-      extra-arguments: -m "not (requires_secrets)"
-      load-test-enabled: false
-      load-test-run-args: "-e LOAD_TEST_HOST=localhost"
-      zap-before-command: "curl -H \"Host: indico.local\" http://localhost/bootstrap --data-raw 'csrf_token=00000000-0000-0000-0000-000000000000&first_name=admin&last_name=admin&email=admin%40admin.com&username=admin&password=lunarlobster&confirm_password=lunarlobster&affiliation=Canonical'"
-      zap-enabled: false
-      zap-cmd-options: '-T 60 -z "-addoninstall jython" --hook "/zap/wrk/tests/zap/hook.py"'
-      zap-target: localhost
-      zap-target-port: 80
-      zap-rules-file-name: "zap_rules.tsv"
-      trivy-fs-enabled: true
-      trivy-image-config: "trivy.yaml"
+      juju-channel: 3.2/stable
+      provider: lxd
+      modules: '["test_charm"]'
+      self-hosted-runner: true
+      self-hosted-runner-arch: X64
+      self-hosted-runner-label: stg-private-endpoint
+      builder-runner-label: X64
+
+  integration-tests-arm:
+    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
+    secrets: inherit
+    with:
+      juju-channel: 3.2/stable
+      provider: lxd
+      modules: '["test_charm"]'
+      self-hosted-runner: true
+      self-hosted-runner-arch: ARM64
+      self-hosted-runner-label: stg-private-endpoint
+      builder-runner-label: ARM64
