--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -31,3 +31,4 @@ jobs:
       self-hosted-runner-arch: ARM64
       self-hosted-runner-label: stg-private-endpoint
       builder-runner-label: ARM64
+      pre-run-script: tests/integration/setup_private_endpoint.sh
