--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -32,3 +32,5 @@ jobs:
       self-hosted-runner-label: stg-private-endpoint
       builder-runner-label: ARM64
       pre-run-script: tests/integration/setup_private_endpoint.sh
+      tmate-debug: true
+      tmate-timeout: 60
