--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -22,25 +22,25 @@ links:
 type: charm
 bases:
   - build-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures:
-      - arm64
+      - name: ubuntu
+        channel: "22.04"
+        architectures:
+          - arm64
     run-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures:
-      - arm64
+      - name: ubuntu
+        channel: "22.04"
+        architectures:
+          - arm64
   - build-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures:
-      - amd64
+      - name: ubuntu
+        channel: "22.04"
+        architectures:
+          - amd64
     run-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures:
-      - amd64
+      - name: ubuntu
+        channel: "22.04"
+        architectures:
+          - amd64
 
 config:
   options:
@@ -106,6 +106,12 @@ config:
       type: int
       default: 5
       description: Number of image revisions to keep before deletion.
+    runner-version:
+      type: str
+      default: ""
+      description: |
+        The GitHub runner version to use, e.g. 2.317.0. Empty default value will fetch the latest
+        version by default. See https://github.com/actions/runner/releases.
 
 provides:
   image:
