--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -60,6 +60,23 @@ config:
       default: 6
       description: |
         The interval in hours between each scheduled image builds.
+    experimental-external-build:
+      type: bool
+      default: false
+      description: |
+        (Experimental) Whether to use external OpenStack builder VM to build a snapshot image.
+    experimental-external-build-flavor:
+      type: string
+      default: ""
+      description: |
+        (Experimental) The flavor to use when launching a builder VM machine. Will default to
+        minimum matching flavor: 2 vCPU, 8G Memory, 20G Disk.
+    experimental-external-build-network:
+      type: string
+      default: ""
+      description: |
+        (Experimental) The network to launch the builder VM machine on. Will default to whatever
+        network with accessible subnet is available.
     openstack-auth-url:
       type: string
       default: ""
