--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -20,6 +20,20 @@ links:
   website: https://charmhub.io/github-runner-image-builder
 
 type: charm
+
+parts:
+  charm:
+    build-snaps:
+      - rustup
+    build-packages:
+      - libffi-dev  # for cffi
+      - libssl-dev  # for cryptography
+      - rust-all  # for cryptography
+      - pkg-config # for cryptography
+    override-build: |
+      rustup default stable
+      craftctl default
+
 bases:
   - build-on:
       - name: ubuntu
@@ -42,6 +56,10 @@ bases:
         architectures:
           - amd64
 
+actions:
+  run:
+    description: Trigger an image builder run immediately.
+
 config:
   options:
     app-channel:
@@ -60,6 +78,23 @@ config:
       default: 6
       description: |
         The interval in hours between each scheduled image builds.
+    experimental-external-build:
+      type: boolean
+      default: false
+      description: |
+        (Experimental) Whether to use external OpenStack builder VM to build a snapshot image.
+    experimental-external-build-flavor:
+      type: string
+      default: ""
+      description: |
+        (Experimental) The flavor to use when launching a builder VM machine. Will default to
+        minimum matching flavor: 2 vCPU, 8G Memory, 20G Disk.
+    experimental-external-build-network:
+      type: string
+      default: ""
+      description: |
+        (Experimental) The network to launch the builder VM machine on. Will default to whatever
+        network with accessible subnet is available.
     openstack-auth-url:
       type: string
       default: ""
