--- a/tests/integration/data/charm/charmcraft.yaml
+++ b/tests/integration/data/charm/charmcraft.yaml
@@ -48,6 +48,48 @@ config:
       type: string
       default: test
       description: test config option to satisfy charmcraft linter.
+    openstack-auth-url:
+      type: string
+      default: ""
+      description: |
+        The auth_url section of the clouds.yaml contents, used to authenticate the OpenStack \
+        client (e.g. http://my-openstack-deployment/openstack-keystone). See https://docs.\
+        openstack.org/python-openstackclient/queens/configuration/index.html for more information.
+    openstack-password:
+      type: string
+      default: ""
+      description: |
+        The password section of the clouds.yaml contents, used to authenticate the OpenStack \
+        client (e.g. myverysecurepassword). See https://docs.openstack.org/python-openstackclient/\
+        queens/configuration/index.html for more information.
+    openstack-project-domain-name:
+      type: string
+      default: ""
+      description: |
+        The project_domain_name section of the clouds.yaml contents, used to find the OpenStack
+        project-domain to use to store images. See https://docs.openstack.org/python-\
+        openstackclient/queens/configuration/index.html for more information.
+    openstack-project-name:
+      type: string
+      default: ""
+      description: |
+        The project_name section of the clouds.yaml contents, used to find the OpenStack project to
+        use to store images. See https://docs.openstack.org/python-openstackclient/queens/\
+        configuration/index.html for more information.
+    openstack-user-domain-name:
+      type: string
+      default: ""
+      description: |
+        The user_domain_name section of the clouds.yaml contents, used to find the OpenStack
+        user domain to authenticate the client. See https://docs.openstack.org/python-\
+        openstackclient/queens/configuration/index.html for more information.
+    openstack-user-name:
+      type: string
+      default: ""
+      description: |
+        The username section of the clouds.yaml contents, used to find the OpenStack user to \
+        authenticate the client. See https://docs.openstack.org/python-openstackclient/queens/\
+        configuration/index.html for more information.
 
 requires:
   image:
