--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -19,6 +19,7 @@ jobs:
       self-hosted-runner-arch: X64
       self-hosted-runner-label: stg-private-endpoint
       builder-runner-label: X64
+      tmate-debug;: true
 
   integration-tests-arm:
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
