--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -104,7 +104,14 @@ config:
       default: ""
       description: |
         The comma separated Juju versions to download in <track>/<risk> format. E.g. to create
-        images with Juju version 2.9/stable and 3.1/edge, juju-channel="2.9/stable,3.1/edge".
+        images with Juju version 2.9/stable and 3.1/edge, juju-channels="2.9/stable,3.1/edge".
+    microk8s-channels:
+      type: string
+      default: ""
+      description: |
+        The comma separated Microk8s versions to download in <track>/<risk> format. E.g. to create
+        images with Microk8s version 1.31-strict/stable and 1.28/stable,
+        microk8s-channels="1.31-strict/stable, 1.28/stable".
     openstack-auth-url:
       type: string
       default: ""
