--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,9 @@ commands =
       --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
       --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 {[vars]all_path} --ignore=W503
+    # ignore E402 (Module level import not at top of file) due to Juju bug.
+    # See: https://bugs.launchpad.net/juju/+bug/2058335
+    pflake8 {[vars]all_path} --ignore=W503,E402
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
     mypy {[vars]all_path}
