--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -175,7 +175,18 @@ config:
       description: |
         URL to external script to run during cloud-init. Allows user-defined customization scripts
         to be run. This script is run as root, within the cloud-init user-data script.
-
+    script-secret-id:
+      type: secret
+      description: |
+        Environment variables to be loaded for execution of the script-url. Juju user secret ID
+        should be passed in in the format of secret:<secret-id>.
+        See https://juju.is/docs/juju/manage-secrets.
+    script-secret:
+      type: string
+      default: ""
+      description: |
+        Environment variables to be loaded for execution of the script-url. Multiple secrets can be
+        passed in, delimited by space. i.e. firstsecret=first secondsecret=second
 
 provides:
   image:
