--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -20,7 +20,7 @@ jobs:
 #      self-hosted-runner-label: stg-private-endpoint
 #      builder-runner-label: X64
   integration-tests-arm:
-    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@test/pe-envs
+    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
     secrets: inherit
     with:
       juju-channel: 3.2/stable
