--- a/app/tox.ini
+++ b/app/tox.ini
@@ -101,6 +101,10 @@ commands =
 [testenv:integration]
 description = Run integration tests
 allowlist_externals=pipx
+pass_env =
+    PYTEST_ADDOPTS
+    OPENSTACK_PASSWORD_AMD64
+    OPENSTACK_PASSWORD_ARM64
 deps =
     pytest
     pytest-asyncio
