--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -14,21 +14,20 @@ jobs:
     with:
       juju-channel: 3.2/stable
       provider: lxd
-#      modules: '["test_charm"]'
-      modules: '["test_charm_upgrade"]'
+      modules: '["test_charm"]'
       self-hosted-runner: true
       self-hosted-runner-arch: X64
       self-hosted-runner-label: stg-private-endpoint
       builder-runner-label: X64
-#  integration-tests-arm:
-#    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
-#    secrets: inherit
-#    with:
-#      juju-channel: 3.2/stable
-#      provider: lxd
-#      modules: '["test_charm"]'
-#      self-hosted-runner: true
-#      self-hosted-runner-arch: ARM64
-#      self-hosted-runner-label: stg-private-endpoint
-#      builder-runner-label: ARM64
-#      pre-run-script: tests/integration/setup_private_endpoint.sh
+  integration-tests-arm:
+    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
+    secrets: inherit
+    with:
+      juju-channel: 3.2/stable
+      provider: lxd
+      modules: '["test_charm"]'
+      self-hosted-runner: true
+      self-hosted-runner-arch: ARM64
+      self-hosted-runner-label: stg-private-endpoint
+      builder-runner-label: ARM64
+      pre-run-script: tests/integration/setup_private_endpoint.sh
