re-enable tests

--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -14,7 +14,7 @@ jobs:
     with:
       juju-channel: 3.2/stable
       provider: lxd
-      modules: '["test_charm"]'
+      modules: '["test_charm", "test_charm_upgrade"]'
       self-hosted-runner: true
       self-hosted-runner-arch: X64
       self-hosted-runner-label: stg-private-endpoint
