--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -52,3 +52,15 @@ jobs:
         run: |
          cd app 
          tox -e integration -- -m amd64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS }}
+  required_status_checks:
+    name: Required Integration Test For Application Status Checks
+    runs-on: ubuntu-latest
+    needs:
+      - integration-tests-amd
+      - integration-tests-arm
+    if: always() && !cancelled()
+    timeout-minutes: 5
+    steps:
+      - run: |
+          [ '${{ needs.integration-tests-amd.result }}' = 'success' ] || (echo integration-tests-amd failed && false)
+          [ '${{ needs.integration-tests-arm.result }}' = 'success' ] || (echo integration-test-arm failed && false)
