chore: Include application repo  (#65)
* checkin app

* WIP checkin

* WIP checkin

* lint & ignore app path in tox ini

* fix dockerhub cache config option

* use environment variables for os passwords

* update codeowners

* lint

* pass env vars

* outcomment ARM test

* use branch from yanks

* check in integration test for app

* REVERT ME: temporarily delete charm integration tests

* remove password per cli passing

* pass env

* add fail-fast false

* add license ignore

* fix proxy in app tests

* update Release notes date

* Revert "REVERT ME: temporarily delete charm integration tests"

This reverts commit 7ab7318611b87dd09566b0a262ff47149c23922c.

* enable ARM integration test

* remove src-docs

* clean charmcraft.yaml

* update RELEASE-NOTES

* pin factory boy

* implement upgrade app and call in upgrade_charm

* WIP checkin unit test

* restructure pipx handling and add unit test

* WIP checkin charm upgrade test

* add integration test for charm upgrade

* REVERT ME: only test charm upgrade

* use config options that worked for stable

* use javi's operator wf branch

* fix lint

* use latest edge specific revision

* pin app-channel config

* remove wrongly checked in file

* use prefix for get_base_image

* add listening

* use juju refresh

* use ops_test juju

* fix pipx install

* use latest stable

* Revert "use latest stable"

This reverts commit 7cf3f8c289debf44a20bf3678f918ed6f619d670.

* integrate app

* Revert "integrate app"

This reverts commit 5b95bebed0e5bfd88f767fde58b005aa414f0b89.

* update release notes

* update comment

* include unit tests for the application

* Revert "REVERT ME: only test charm upgrade"

This reverts commit 76c719bf45ed2915dd4ce5c01665b0f7f0425f1d.

* re-enable tests

* fix test_openstack_builder integration test

* increase create server timeout

* increase create server timeout in app int test


--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -33,6 +33,17 @@ parts:
     override-build: |
       rustup default stable
       craftctl default
+  app:
+    plugin: nil
+    override-build: |
+      cd /root/project
+      tar -cvzf app.tar.gz app
+      cp app.tar.gz /root/stage
+    organize:
+        app.tar.gz: app.tar.gz
+    prime:
+        - app.tar.gz
+
 
 bases:
   - build-on:
@@ -66,10 +77,6 @@ config:
       type: string
       default: ""
       description: The image architecture to build for using external builder (i.e. amd64, arm64).
-    app-channel:
-      type: string
-      default: stable
-      description: The application channel to deploy (i.e. stable, edge)
     base-image:
       type: string
       default: noble
