--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ skip_missing_interpreters = True
 envlist = lint, unit, static, coverage-report
 
 [vars]
+app_path = {toxinidir}/app/
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
@@ -121,7 +122,7 @@ deps =
     -r{[vars]tst_path}unit/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
-        -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
+        -m pytest --ignore={[vars]app_path} --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
     coverage report
 
 [testenv:coverage-report]
@@ -156,7 +157,7 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{[vars]tst_path}integration/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    pytest -v --tb native --ignore={[vars]app_path} --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
     ; Testing with microstack
     ; tox -e integration -- --charm-file=./github-runner-image-builder_ubuntu-22.04-amd64-arm64.charm
     ; --openstack-network-name=demo-network --openstack-flavor-name=m1.small
@@ -165,13 +166,3 @@ commands =
     ; --openstack-password=<redacted> --openstack-project-domain-name=<redacted>
     ; --openstack-project-name=<redacted> --openstack-user-domain-name=<redacted>
     ; --openstack-user-name=<redacted> --openstack-region-name=<redacted>
-
-[testenv:src-docs]
-allowlist_externals=sh
-description = Generate documentation for src
-deps =
-    lazydocs
-    -r{toxinidir}/requirements.txt
-commands =
-    ; can't run lazydocs directly due to needing to run it on src/* which produces an invocation error in tox
-    sh generate-src-docs.sh
