--- a/.github/workflows/test_app.yaml
+++ b/.github/workflows/test_app.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  unit-tests:
+  unit-tests-for-app:
     uses: canonical/operator-workflows/.github/workflows/test.yaml@main
     secrets: inherit
     with:
