--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -29,7 +29,7 @@ jobs:
           OPENSTACK_PASSWORD_ARM64: ${{ secrets.OPENSTACK_PASSWORD_ARM64 }}
         run: |
          cd app
-         tox -e integration -- -m arm64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS }}
+         tox -e integration -- -m arm64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP }}
   integration-tests-amd:
     name: Integration test (X64)
     runs-on: [self-hosted, X64, jammy, stg-private-endpoint]
@@ -51,7 +51,7 @@ jobs:
           OPENSTACK_PASSWORD_AMD64: ${{ secrets.OPENSTACK_PASSWORD_AMD64 }}
         run: |
          cd app 
-         tox -e integration -- -m amd64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS }}
+         tox -e integration -- -m amd64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP }}
   required_status_checks:
     name: Required Integration Test For Application Status Checks
     runs-on: ubuntu-latest
